--- a/css.html
+++ b/css.html
@@ -3,17 +3,22 @@
 <head>
   <title>CSS</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <H1><a href="index.html">WEB</a href=""></H1>
-  <ul>
-    <li><a href="html.html">HTML</a href=""></li>
-    <li><a href="css.html">css</a href=""></li>
-    <li><a href="javascript.html">JavaScript</a href=""></li>
-    <li><a href="정리, 잡담.html">정리, 잡담</a></li>
-  </ul>
+  <div id="grid">
+    <ul>
+      <li><a href="html.html">HTML</a href=""></li>
+      <li><a href="css.html">CSS</a href=""></li>
+      <li><a href="javascript.html">JavaScript</a href=""></li>
+      <li><a href="정리, 잡담.html">정리, 잡담</a></li>
+    </ul>
+    <div id="article">
 
-  <h2>CSS란 무엇일까?</h2>
+      <h2>CSS란 무엇일까?</h2>
+    </div>
+  </div>
 </body>
 </html>
