--- a/html.html
+++ b/html.html
@@ -3,22 +3,26 @@
 <head>
   <title>HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <H1><a href="index.html">WEB</a href=""></H1>
-  <ul>
-    <li><a href="html.html">HTML</a href=""></li>
-    <li><a href="css.html">css</a href=""></li>
-    <li><a href="javascript.html">JavaScript</a href=""></li>
-    <li><a href="정리, 잡담.html">정리, 잡담</a></li>
-  </ul>
+  <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
+    <ul>
+      <li><a href="html.html">HTML</a></li>
+      <li><a href="css.html">CSS</a></li>
+      <li><a href="javascript.html">JavaScript</a></li>
+      <li><a href="정리, 잡담.html">정리, 잡담</a></li>
+    </ul>
 
-  <h2>HTML이란 무엇인가?</h2>
-
-  <a href="https://www.w3.org/TR/html4/" target="_blank" title="thml4 specification">Hypertext Markup Language (HTML)</a> is the standard markup language
-  for <strong>creating <u>web</u> pages</strong> and web applications.
-
-
-</body>
+    <div id="article">
+      <h2>HTML이란 무엇인가?</h2>
+      <p>
+      Hypertext Markup Language <a href="https://www.w3.org/TR/html4/" target="_blank" title="thml4 specification"><font color="blue">(HTML)</font></a> is the standard markup language
+      for <strong>creating <u>web</u> pages</strong> and web applications.
+      </p>
+    </div>
+  </div>
+  </body>
 </html>
