--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
   <title>HELLO HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <H1><a href="index.html">WEB</a href=""></H1>
-  <ul>
-    <li><a href="html.html">HTML</a></li>
-    <li><a href="css.html">css</a></li>
-    <li><a href="javascript.html">JavaScript</a></li>
-    <li><a href="정리, 잡담.html">정리, 잡담</a></li>
-  </ul>
+  <div id="grid">
+    <ul>
+      <li><a href="html.html" class="saw">HTML</a></li>
+      <li><a href="css.html" class="saw" id="active">CSS</a></li>
+      <li><a href="javascript.html">JavaScript</a></li>
+      <li><a href="정리, 잡담.html">정리, 잡담</a></li>
+    </ul>
 
-  <h2> 어서오세요 반갑습니다 :) </h2>
+  <!--
+    <H1><a href="index.html"><font color="black">WEB</font></a href=""></H1>
+    <ul>
+      <li><a href="html.html"><font color="red">HTML</font></a></li>
+      <li><a href="css.html"><font color="red">css</font></a></li>
+      <li><a href="javascript.html"><font color="red">JavaScript</font></a></li>
+      <li><a href="정리, 잡담.html"><font color="green">정리, 잡담</font></a></li>
+    </ul>
+  -->
+    <div id="article">
+      <h2> 어서오세요 반갑습니다 :) </h2>
+    </div>
+  </div>
+
 </body>
 </html>
