--- a/정리, 잡담.html
+++ b/정리, 잡담.html
@@ -3,89 +3,94 @@
 <head>
   <title>정리, 잡담</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <H1><a href="index.html">WEB</a href=""></H1>
-  <ul>
-    <li><a href="html.html">HTML</a></li>
-    <li><a href="css.html">css</a></li>
-    <li><a href="javascript.html">JavaScript</a></li>
-    <li><a href="정리, 잡담.html">정리, 잡담</a></li>
-  </ul>
+  <div id="grid">
+    <ul>
+      <li><a href="html.html">HTML</a></li>
+      <li><a href="css.html">CSS</a></li>
+      <li><a href="javascript.html">JavaScript</a></li>
+      <li><a href="정리, 잡담.html">정리, 잡담</a></li>
+    </ul>
 
-  <h1>응애</h1>
-  <h2>응애</h2>
-  <h3>응애</h3>
-  <h4>응애</h4>
-  <h5>응애</h5>
-  <h6>응애</h6>
+    <div id="article">
+      <h1>응애</h1>
+      <h2>응애</h2>
+      <h3>응애</h3>
+      <h4>응애</h4>
+      <h5>응애</h5>
+      <h6>응애</h6>
 
-  <p>
-    처음 페이지 소스를 본다면 외계어파티였을테지만
-  <br>태그의 개념을 알고 본다면 태그외계어파티 정도로 발전했을 것이다.</p>
-  <p>
-    예전같았다면 집에서 도서관가서 도서관에서 책 찾아서 책에서 태그 찾아서
-  <br>태그의 종류, 사용법, 효과 등에 대해 학습하고 외워야했겠지만
-  <br>지금은 인터넷에 검색 띡 하면 바로바로 뜬다. 아ㅏㅏㅏ주 생산성이 높은 시대이다.</p>
-  <p>
-    태그를 검색해보더라도 정의부터 읽고 무작정 이해하려하기보단 <strong>예제들을 사용해보며 </strong>
-  <br>어떤 효과인가 어떨때 쓰는가 등의 느낌을 충분히 이해하고
-  <br>정의를 읽어보면 훨씬 이해가 쉬울 것이다. 자신이 스스로 정의내릴 수 있다.</p>
-  <p>
-    세상에는 150여의 태그가 존재한다.
-  <br>웹이 서비스를 할 초기에도 18개의 태그가 존재했다.
-  <br>하지만 현재는 무엇을 얼마나 자주 쓰는가?
-  <br>몇개정도의 태그를 웹에서 보통 사용하는가? 통계를 알고싶다면
-  <br><strong><a href="https://www.advancedwebranking.com/"target="_blank" title="통계가 궁금하니?">advancedwebranking.com</a> <<</strong>
-  <br>frequency of tag~</p>
+      <p>
+        처음 페이지 소스를 본다면 외계어파티였을테지만
+      <br>태그의 개념을 알고 본다면 태그외계어파티 정도로 발전했을 것이다.</p>
+      <p>
+        예전같았다면 집에서 도서관가서 도서관에서 책 찾아서 책에서 태그 찾아서
+      <br>태그의 종류, 사용법, 효과 등에 대해 학습하고 외워야했겠지만
+      <br>지금은 인터넷에 검색 띡 하면 바로바로 뜬다. 아ㅏㅏㅏ주 생산성이 높은 시대이다.</p>
+      <p>
+        태그를 검색해보더라도 정의부터 읽고 무작정 이해하려하기보단 <strong>예제들을 사용해보며 </strong>
+      <br>어떤 효과인가 어떨때 쓰는가 등의 느낌을 충분히 이해하고
+      <br>정의를 읽어보면 훨씬 이해가 쉬울 것이다. 자신이 스스로 정의내릴 수 있다.</p>
+      <p>
+        세상에는 150여의 태그가 존재한다.
+      <br>웹이 서비스를 할 초기에도 18개의 태그가 존재했다.
+      <br>하지만 현재는 무엇을 얼마나 자주 쓰는가?
+      <br>몇개정도의 태그를 웹에서 보통 사용하는가? 통계를 알고싶다면
+      <br><strong><a href="https://www.advancedwebranking.com/"target="_blank" title="통계가 궁금하니?">advancedwebranking.com</a> <<</strong>
+      <br>frequency of tag~</p>
 
-  <p>
-    br태그를 여러개 써서 단락을 만드는것보다
-  <br>p태그를 쓰는것이 더 좋은 결정이다.
-  <br>p태그는 이 웹페이지를 정보로서 더 가치있게 만들어주기때문.
-  <br>br태그는 그저 줄바꿈일 뿐이기 때문이다.
-  <br>
-  <br>하지만 p로는 한줄만(정해진 만큼만) 띄우잖아! br여러개 쓴거처럼 포인트를 주고싶어!
-  <br>그럴때 css가 있습니다. 시각적으로 부족한 부분은 css로 정교하게 쌉가능!
-  <br>의미에 맞는 태그를 잘 쓰자.</p>
+      <p>
+        br태그를 여러개 써서 단락을 만드는것보다
+      <br>p태그를 쓰는것이 더 좋은 결정이다.
+      <br>p태그는 이 웹페이지를 정보로서 더 가치있게 만들어주기때문.
+      <br>br태그는 그저 줄바꿈일 뿐이기 때문이다.
+      <br>
+      <br>하지만 p로는 한줄만(정해진 만큼만) 띄우잖아! br여러개 쓴거처럼 포인트를 주고싶어!
+      <br>그럴때 css가 있습니다. 시각적으로 부족한 부분은 css로 정교하게 쌉가능!
+      <br>의미에 맞는 태그를 잘 쓰자.</p>
 
-  <p style="margin-top:50px;">
-    같은 제목을 가진 문서가 수없이 많이 있다.
-  <br>만약 태그를 사용하지 않고 제목을 강조한(글자 크기, 굵기, 위치를 통해) 문서와
-  <br>h태그를 이용하여 제목을 강조한 문서가 있다면
-  <br>검색엔진과 웹에서는 어떤 문서를 더 우선할까?</p>
-  <p>
-    검색엔진 또한 웹상의 정보들을 양질로 처리하기 위해 분류를 할텐데
-  <br>태그로 구분하지 않겠나?
-  <br>그럴경우 1페이지엔 어떤 문서가 뜨고 100페이지엔 어떤 문서가 뜰까?
-  <br>답은 쉽게 추측할 것이다.
-  <br>사람들은 1페이지의 문서를 볼까 100페이지의 문서를 볼까?
-  <br>그렇다면 1페이지의 문서가 더 양질의 문서일까 100페이지의 문서가 더 양질의 문서일까?</p>
-  <p>
-    웹이 가지고 있는 중요한 의미. 정보를 탄탄히 하는것이 훨씬 더 중요한것이다.
-  <br>이쁘게 보이려고 이미지로만 글자를 써놓거는다면 그것은 웹에서 정보로 표시할까?
-  <br>그냥 이미지파일일 뿐이라 검색해도 안뜰것인데..
-  <br>극단적인 예시로 시각장애인이 정보를 알려고하면 웹페이지를 볼 수 없으니
-  <br>그 웹페이지의 문서를 읽어주는 프로그램을 사용할것이다.
-  <br>그렇다면 그 이미지는 프로그램이 읽어줄것인가?
-  <br>그것은 양질의 문서인가?
-  <br>그 외에도 접근성,
-  <br>모든 운영체제에서 동작하고 소스코드 누구나 볼수 있고 저작권이 없다.
-  <br><strong>accessibility</strong></p>
-  <p>
-  <img src="coding.jpg" width="100%">
-  <a href="https://unsplash.com/"target="_blank">unsplash.com</a> 에서 양질의 저작권없는 사진을 얻어다 쓸 수 있다.
-  <br>그래서 img태그로 이미지만 불러온다면?
-  <br>아무 일이 발생하지 않는다.
-  <br>어떤 이미지 파일을 불러와야 할 지 알아야 할 것 아닌가.
-  <br>그럴때 source의 줄임말 src로 불러와본다.
-  <br>불러와본다면 원본처럼 준내 크게 나올것이다. 크기 또한 마음에 들지 않는다.
-  <br>그럴때 width로 크기를 조정한다.
-  <br>그렇게 태그가 태그의 이름만으로는 정보가 부족할 때
-  <br>이런 속성을 통해서 더 많은 의미를 부가할 수 있다.</p>
-  <p>
-  ctrl+click해서 여러개의 줄을 샥샥 만들 수 있다.
-  <br>짜잔!!
+      <p style="margin-top:50px;">
+        같은 제목을 가진 문서가 수없이 많이 있다.
+      <br>만약 태그를 사용하지 않고 제목을 강조한(글자 크기, 굵기, 위치를 통해) 문서와
+      <br>h태그를 이용하여 제목을 강조한 문서가 있다면
+      <br>검색엔진과 웹에서는 어떤 문서를 더 우선할까?</p>
+      <p>
+        검색엔진 또한 웹상의 정보들을 양질로 처리하기 위해 분류를 할텐데
+      <br>태그로 구분하지 않겠나?
+      <br>그럴경우 1페이지엔 어떤 문서가 뜨고 100페이지엔 어떤 문서가 뜰까?
+      <br>답은 쉽게 추측할 것이다.
+      <br>사람들은 1페이지의 문서를 볼까 100페이지의 문서를 볼까?
+      <br>그렇다면 1페이지의 문서가 더 양질의 문서일까 100페이지의 문서가 더 양질의 문서일까?</p>
+      <p>
+        웹이 가지고 있는 중요한 의미. 정보를 탄탄히 하는것이 훨씬 더 중요한것이다.
+      <br>이쁘게 보이려고 이미지로만 글자를 써놓거는다면 그것은 웹에서 정보로 표시할까?
+      <br>그냥 이미지파일일 뿐이라 검색해도 안뜰것인데..
+      <br>극단적인 예시로 시각장애인이 정보를 알려고하면 웹페이지를 볼 수 없으니
+      <br>그 웹페이지의 문서를 읽어주는 프로그램을 사용할것이다.
+      <br>그렇다면 그 이미지는 프로그램이 읽어줄것인가?
+      <br>그것은 양질의 문서인가?
+      <br>그 외에도 접근성,
+      <br>모든 운영체제에서 동작하고 소스코드 누구나 볼수 있고 저작권이 없다.
+      <br><strong>accessibility</strong></p>
+      <p>
+      <img src="coding.jpg" width="100%">
+      <a href="https://unsplash.com/"target="_blank">unsplash.com</a> 에서 양질의 저작권없는 사진을 얻어다 쓸 수 있다.
+      <br>그래서 img태그로 이미지만 불러온다면?
+      <br>아무 일이 발생하지 않는다.
+      <br>어떤 이미지 파일을 불러와야 할 지 알아야 할 것 아닌가.
+      <br>그럴때 source의 줄임말 src로 불러와본다.
+      <br>불러와본다면 원본처럼 준내 크게 나올것이다. 크기 또한 마음에 들지 않는다.
+      <br>그럴때 width로 크기를 조정한다.
+      <br>그렇게 태그가 태그의 이름만으로는 정보가 부족할 때
+      <br>이런 속성을 통해서 더 많은 의미를 부가할 수 있다.</p>
+      <p>
+      ctrl+click해서 여러개의 줄을 샥샥 만들 수 있다.
+      <br>짜잔!!
+    </div>
+  </div>
 </body>
 </html>
