--- a/css.html
+++ b/css.html
@@ -8,6 +8,9 @@
 
 <body>
   <H1><a href="index.html">WEB</a href=""></H1>
+    <input type="button" value="night" onclick="
+    nightDayHandler(this);
+    ">
   <div id="grid">
     <ul>
       <li><a href="html.html">HTML</a href=""></li>
