--- a/html.html
+++ b/html.html
@@ -3,11 +3,15 @@
 <head>
   <title>HTML</title>
   <meta charset="utf-8">
+  <script src="colors.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="
+  nightDayHandler(this);
+  ">
   <div id="grid">
     <ul>
       <li><a href="html.html">HTML</a></li>
@@ -19,7 +23,7 @@
     <div id="article">
       <h2>HTML이란 무엇인가?</h2>
       <p>
-      Hypertext Markup Language <a href="https://www.w3.org/TR/html4/" target="_blank" title="thml4 specification"><font color="blue">(HTML)</font></a> is the standard markup language
+      Hypertext Markup Language <a href="https://www.w3.org/TR/html4/" target="_blank" title="thml4 specification">(HTML)</a> is the standard markup language
       for <strong>creating <u>web</u> pages</strong> and web applications.
       </p>
     </div>
