--- a/정리, 잡담.html
+++ b/정리, 잡담.html
@@ -3,11 +3,15 @@
 <head>
   <title>정리, 잡담</title>
   <meta charset="utf-8">
+  <script src="colors.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <H1><a href="index.html">WEB</a href=""></H1>
+    <input type="button" value="night" onclick="
+    nightDayHandler(this);
+    ">
   <div id="grid">
     <ul>
       <li><a href="html.html">HTML</a></li>
