--- a/javascript.html
+++ b/javascript.html
@@ -3,11 +3,34 @@
 <head>
   <title>JavaScript</title>
   <meta charset="utf-8">
+  <script src="colors.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <H1><a href="index.html">WEB</a href=""></H1>
+  <input type="button" value="night" onclick="
+    document.querySelector('body').style.backgroundColor = 'black';
+    document.querySelector('body').style.color = 'white';
+  ">
+  <input type="button" value="day" onclick="
+    document.querySelector('body').style.backgroundColor = 'white';
+    document.querySelector('body').style.color = 'black';
+  ">
+  <input id="night_day" type="button" value="night" onclick="
+  if(document.querySelector('#night_day').value === 'night'){
+    document.querySelector('body').style.backgroundColor = 'black';
+    document.querySelector('body').style.color = 'white';
+    document.querySelector('#night_day').value = 'day';
+  } else {
+    document.querySelector('body').style.backgroundColor = 'white';
+    document.querySelector('body').style.color = 'black';
+    document.querySelector('#night_day').value = 'night';
+  }
+  ">
+  <!--  document.querySelector('#night_day')=this
+        onclick안에서 자기 자신을 지칭할 경우!
+  -->
   <div id="grid">
     <ul>
       <li><a href="html.html">HTML</a href=""></li>
@@ -20,5 +43,8 @@
       <h2>JavaScript란 무엇일까?</h2>
     </div>
   </div>
+  <input type="button" value="night" onclick="
+  nightDayHandler(this);
+  ">
 </body>
 </html>
